--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
    </nav>
    <section id="profile">
     <div class="section_text">
-        <h1 class="title">It's time to POP !</h1>
-        <p class="section_text_p1">Développeuse frontend / Graphiste</p>
+        <h1 class="title">Alexia BRILHAULT as Silypop</h1>
+        <p class="section_text_p1">Web Dev & UI / UX Design</p>
+        <p class="section_text_p2">Un peu comme l'histoire du Jazz, je fusionne le graphisme et le web.</p>
     </div>
    </section>
    <section id="socials">
