--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    </nav>
    <section id="profile">
     <div class="section_text">
-        <h1 class="title">Alexia as Silypop BRILHAULT</h1>
+        <h1 class="title">Alexia "Silypop" BRILHAULT</h1>
         <p class="section_text_p1">Web Dev & UI / UX Design</p>
         <p class="section_text_p2">Un peu comme l'histoire du Jazz, je fusionne le graphisme et le web !</p>
     </div>
