--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
    <section id="profile">
     <div class="section_text">
         <h1 class="title">Alexia "Silypop"</h1>
-        <p class="section_text_p1">Web Dev & UI / UX Design</p>
-        <p class="section_text_p2">Un peu comme l'histoire du Jazz, je fusionne le graphisme et le web !</p>
+        <p class="section_text_p1">Web Dev, UI / UX Designer & Graphic Designer</p>
+        <p class="section_text_p2">La fusion du le graphisme et du web !</p>
     </div>
    </section>
    <section id="socials">
@@ -86,12 +86,12 @@
         <div class="details-container color-container">
           <div class="article-container">
             <img
-              src="./Img/Couverture ANTS_RA_2014_Page_01.jpg"
+              src="./Img/affiche TLA.jpeg"
               alt="Project 3"
               class="project-img"
             />
           </div>
-          <h2 class="experience-sub-title project-title">Rapport d'activité pour l'ANTS</h2>
+          <h2 class="experience-sub-title project-title">Affiche Théâtre Les Ateliers</h2>
           </div>
         </div>
       </div>
