--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="section_text">
         <h1 class="title">Alexia "Silypop"</h1>
         <p class="section_text_p1">Web Dev, UI / UX Designer & Graphic Designer</p>
-        <p class="section_text_p2">La fusion du le graphisme et du web !</p>
+        <p class="section_text_p2">La fusion du graphisme et du web !</p>
     </div>
    </section>
    <section id="socials">
